--- a/index.html
+++ b/index.html
@@ -4,36 +4,32 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Tailor-Made-Trips</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css"
-    />
+
     <link
       rel="stylesheet"
       type="text/css"
       href="https://api.tomtom.com/maps-sdk-for-web/cdn/plugins/SearchBox/3.1.3-public-preview.0/SearchBox.css"
     />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <video
-      class="video-background"
-      src="./assets/images/185841-876533119_small.mp4"
-      muted
-      autoplay
-      loop
-    ></video>
-    <div class="cover"></div>
+    <div class="slideshow"></div>
+    <!-- Added slideshow div -->
 
     <section class="section">
       <div class="container">
-        <h1 class="title">Tailor Made Trips</h1>
+        <h1 class="title">Wanderly</h1>
 
         <!-- Search Box -->
         <div id="search-box-container"></div>
         <div class="wrap-button">
           <button id="search-button" class="button is-primary">Search</button>
-          <button id="recent-button" class="button is-primary">Recent</button>
         </div>
 
         <!-- Currency Conversion -->
@@ -95,13 +91,13 @@
 
         <div id="search-list"></div>
       </div>
-      <video
+      <!-- <video
         src="./assets/185841-876533119_small.mp4"
         muted
         autoplay
         loop
         alt="a video of the sea"
-      ></video>
+      ></video> -->
     </section>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
